(feat): add filters at get endpoints
